<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JIRA Quality Monitor</string>

    <!-- LoginActivity -->
    <string name="login_activity_title">Login</string>
    <string name="login_activity_username_hint">Username</string>
    <string name="login_activity_password_hint">Password</string>
    <string name="login_activity_button_text">Login</string>
    <string name="login_activity_logo_content_description">App Logo</string>

    <!-- DashboardActivity -->
    <string name="dashboard_activity_title">Dashboard</string>
    <string name="dashboard_activity_project_name">Projekt</string>
    <string name="dashboard_activity_issue_quality_name">Update Quality</string>
    <string name="dashboard_activity_issue_count_name">Issue Assignment</string>
    <string name="dashboard_activity_metric_detail_overview_button">Overview</string>

    <!-- InboxActivity -->
    <string name="inbox_activity_title">Inbox</string>

    <!-- InboxDialogActivity -->
    <string name="inbox_dialog_activity_title">Dialog</string>
    <string name="inbox_dialog_activity_send_button">Send</string>
    <string name="inbox_dialog_activity_resolve_button">Resolve</string>
    <string name="inbox_dialog_activity_new_message_hint">New Message</string>

    <!-- IssueUpdateQualityOverviewActivity -->
    <string name="issue_update_quality_overview_activity_title">Overview</string>

    <!-- IssueUpdateQualityDetailActivity -->
    <string name="issue_update_quality_detail_activity_title">Details</string>
    <string name="issue_update_quality_detail_activity_issue_key_label">Issue</string>

    <!-- IssueUpdateQualityDetailLandscapeActivity -->
    <string name="issue_update_quality_detail_landscape_activity_title">History</string>

    <!-- IssueAssignmentOverviewActivity -->
    <string name="issue_assignment_overview_activity_title">Overview</string>

    <!-- IssueAssignmentDetailActivity -->
    <string name="issue_assignment_detail_activity_title">Details</string>
    <string name="issue_assignment_detail_activity_name_label">Name</string>

    <!-- IssueAssignmentDetailLandscapeActivity -->
    <string name="issue_assignment_detail_landscape_activity_title">History</string>

    <!-- Intent messages -->
    <string name="key_intent_message">de.htwg.tqm.MESSAGE</string>
    <string name="key_intent_boolean">de.htwg.tqm.BOOLEAN</string>

    <string name="key_intent_new_dialog_arrived">de.htwg.tqm.NEW.DIALOG</string>
    <string name="key_intent_create_dialog_initiator">de.htwg.tqm.DIALOG.INITIATOR</string>
    <string name="key_intent_create_dialog_affected">de.htwg.tqm.DIALOG.AFFECTED</string>
    <string name="key_intent_create_dialog_subject">de.htwg.tqm.DIALOG.SUBJECT</string>
    <string name="key_intent_create_dialog_violationID">de.htwg.tqm.DIALOG.VIOLATION_ID</string>

    <!-- misc -->
    <string name="loading">Loading ..</string>
    <string name="hours_per_update">Average hours spent per update:&#160;</string>
    <string name="assignee">Assignee:&#160;</string>
    <string name="issues_error">Failed to load issues. Please check your settings.</string>
    <string name="network_error">Please check your settings.</string>
    <string name="register_user_push">User registered for push.</string>

    <!-- notifications -->
    <string name="notification_title">New critical issues found</string>
    <string name="notification_description">Tap here to view them</string>
    <string name="notification_metric_violated_title">Metric Violated</string>
    <string name="notification_assignment_metric_violated_description">Looks like there are too many issues assigned to you:</string>
    <string name="notification_quality_metric_violated_description">Looks like one of your issues is updated too rarely:</string>

    <string-array name="preference_default_project_entries"></string-array>
    <string-array name="preference_default_project_values"></string-array>
    <string-array name="preference_role_entries">
        <item>Developer</item>
        <item>Scrum Master</item>
    </string-array>
    <string-array name="preference_role_values">
        <item>DEV</item>
        <item>SM</item>
    </string-array>

    <!-- shared preferences keys -->
    <string name="key_jira_host">jira_host</string>
    <string name="key_jira_username">jira_username</string>
    <string name="key_jira_password">jira_password</string>
    <string name="key_project">project</string>
    <string name="key_quality_color_threshold_green">quality_color_threshold_green</string>
    <string name="key_quality_color_threshold_yellow">quality_color_threshold_yellow</string>
    <string name="key_count_color_threshold_green">count_color_threshold_green</string>
    <string name="key_count_color_threshold_yellow">count_color_threshold_yellow</string>
    <string name="key_enable_notifications">enable_notifications</string>
    <string name="key_notifications_interval">notifications_interval</string>
    <string name="key_issues_refresh_rate">issues_refresh_rate</string>
    <string name="key_user_role">user_role</string>
    <string name="preference_summary_role">Your role in your team</string>

    <!-- shared preferences -->
    <string name="preference_heading">Preferences</string>
    <string name="preference_heading_credentials">Access Data</string>
    <string name="preference_heading_projects">Tracked Project</string>
    <string name="preference_heading_quality_colors">Quality Color Thresholds</string>
    <string name="preference_heading_count_colors">Count Color Thresholds</string>
    <string name="preference_heading_notifications_refresh">Notifications and Auto Refresh</string>

    <string name="preference_title_uri">JIRA Host URI</string>
    <string name="preference_default_uri">http://localhost/</string>
    <string name="preference_summary_uri">The host URI where the JIRA server is accessible</string>
    <string name="preference_title_username">Username</string>
    <string name="preference_default_username">johndoe</string>
    <string name="preference_summary_username">Your username for the JIRA API</string>
    <string name="preference_title_password">Password</string>
    <string name="preference_default_password">Secret</string>
    <string name="preference_summary_password">Your password for the JIRA API</string>
    <string name="preference_error_projects">Retrieving projects failed. 
        Please check your credentials and the URI. Click here to reload.</string>
    <string name="preference_title_role">Role</string>

    <string name="preference_title_quality_color_threshold_green">Green</string>
    <string name="preference_default_quality_color_threshold_green">2.0</string>
    <string name="preference_summary_quality_color_threshold_green">Maximum hours per update to be marked green.</string>
    <string name="preference_title_quality_color_threshold_yellow">Yellow</string>
    <string name="preference_default_quality_color_threshold_yellow">4.0</string>
    <string name="preference_summary_quality_color_threshold_yellow">Maximum hours per update to be marked yellow.</string>

    <string name="preference_title_assignment_color_threshold_green">Green</string>
    <string name="preference_default_assignment_color_threshold_green">1.0</string>
    <string name="preference_summary_assignment_color_threshold_green">Maximum number of assigned tickets to be marked green.</string>
    <string name="preference_title_assignment_color_threshold_yellow">Yellow</string>
    <string name="preference_default_assignment_color_threshold_yellow">3.0</string>
    <string name="preference_summary_assignment_color_threshold_yellow">Maximum number of assigned tickets to be marked yellow.</string>

    <string name="preference_title_enable_notifications">Notifications enabled</string>
    <string name="preference_summary_enable_notifications">Enable or disable notifications about critical issues.</string>
    <string name="preference_title_notifications_interval">Notifications interval in minutes</string>
    <string name="preference_default_notifications_interval">15</string>
    <string name="preference_summary_notifications_interval">Interval between checking for new critical issues.</string>
    <string name="preference_title_issues_refresh_rate">Issues refresh rate in minutes</string>
    <string name="preference_default_issues_refresh_rate">1</string>
    <string name="preference_summary_issues_refresh_rate">How often the issues list will be refreshed if the app is open.</string>

</resources>