<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inbox_dialog_activity_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".communication.InboxDialogActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/inbox_activity_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:paddingBottom="30dp"/>

        <TextView
            android:id="@+id/inbox_activity_dialog_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/inbox_activity_buttons"
            android:layout_below="@+id/inbox_activity_dialog_name"
            android:textSize="20sp"
            android:scrollbars="vertical">
        </TextView>

        <LinearLayout
            android:id="@+id/inbox_activity_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inbox_activity_dialog_new_message"
                android:hint="@string/inbox_dialog_activity_new_message_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:scrollbars="vertical"
                android:layout_marginBottom="20dp">
            </EditText>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/inbox_activity_dialog_send_message"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/inbox_dialog_activity_send_button"
                    android:background="@android:color/transparent"/>

                <Button
                    android:id="@+id/inbox_activity_dialog_resolve_dialog"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/inbox_dialog_activity_resolve_button"
                    android:background="@android:color/transparent"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
